discussion/kv_engine/170266/170266_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: FollyExecutorPool cancel tasks in cpuPool queue

Add a mechanism to remove work for a given taskable from the
cpuPool queue.

This is implemented by interposing our own queue of work underneath
the queue in the cpuPool to allow us to remove tasks from the queue
when we unregister a taskable. Now, when we schedule a task we
enqueue it in a queue in a custom executor and schedule a task on the
base executor to pop a task from the queue and run it. To remove tasks
when we unregister a taskable we pop all elements of our queue and
re-push only those of the other taskables and manually cancel each
task for the taskable going away.

Change-Id: Idcbf1737b80c3d3b92ed62adb3d4d164a2cf4266

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-10 17:08:20.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-10 17:31:42.000000000
Message: 
Patch Set 17: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43804/ : ABORTED

Timeout of a CTest test 268/421 Test #178: ep-engine_ep_unit_tests.PersistentAndEphemeral/StreamTest .....................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43804/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43804/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17542/ : ABORTED

Timeout of a CTest test [2022-02-10T17:27:32.765Z] 440/441 Test #195: ep-engine_ep_unit_tests.PersistentAndEphemeral/DcpStreamSyncReplTest ........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17542/ )

Test exceeded the timeout:
[2022-02-10T17:20:26.392Z] Running [0057/0093]: test add stream prod nmvb.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17542/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17542/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5209/ : ABORTED

Test exceeded the timeout:
[2022-02-10T17:19:40.567Z] Running [0047/0093]: test rollback to zero on consumer.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5209/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5209/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18276/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18276/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25641/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25641/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15500/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15500/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15500/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16317/ : FAILURE

Timeout of a CTest test [2022-02-10T17:27:48.497Z] 109/441 Test #198: ep-engine_ep_unit_tests.PersistentAndEphemeral/ConnectionTest ...............................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16317/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17234/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17234/ )

Test exceeded the timeout:
[2022-02-10T17:16:53.423Z] Running [0030/0093]: test producer stream request (latest flag).../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17234/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14342/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36936/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5148/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
